Added back on feature activity_edit_task.java

--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -11,7 +11,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/icon_back"
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_backk"
         android:contentDescription="@string/app_name"/>
 
     <TextView
