displays detailed edited data and change the color red of the update, edit button and added textview category activity_edit_task.java

--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -83,7 +83,7 @@
         android:layout_alignParentBottom="true"
         android:backgroundTint="@color/maron"
         android:fontFamily="@font/poppins_medium"
-        android:text="Create Task"
+        android:text="Update Task"
         android:textAllCaps="false"
         android:textSize="16sp" />
 
