--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -68,6 +68,29 @@
         app:layout_constraintTop_toTopOf="@+id/img_icon_date" />
 
     <TextView
+        android:id="@+id/tv_ct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Category"
+        android:textColor="@color/maron"
+        android:layout_marginTop="24dp"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_icon_date" />
+    <TextView
+        android:id="@+id/tv_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins"
+        android:text="Category"
+        android:textColor="@color/maron_pudar"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_ct" />
+
+    <TextView
         android:id="@+id/tv_ds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,7 +98,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Description"
         android:textColor="@color/maron"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="84dp"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_icon_date" />
@@ -91,6 +114,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ds" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,7 +129,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/maron"
+            android:backgroundTint="#F44336"
             app:cornerRadius="30dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins_medium"
@@ -113,14 +137,12 @@
             android:textAllCaps="false"
             android:textSize="16sp" />
 
-
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_delete"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/maron_pudar"
+            android:backgroundTint="#F44336"
             app:cornerRadius="30dp"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/poppins_medium"
